# iltransfer

./: .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  add_dependencies.sh  ids.txt  pyproject.toml
.github/ISSUE_TEMPLATE/: question.yml
docs/source/: conf.py  iltransfer.rst  index.rst  modules.rst
iltransfer/: __init__.py  __main__.py  cli.py  config.py  consts.py  file_processing.py  logs.py
tests/: test_cli.py
