[tool.poetry]
name = "iltransfer"
version = "0.0.1"
description = "Transfer your Instaloader downloads to another path"
license = "GPL-3.0-only"
authors = ["Alejandro González Momblán <agelrenorenardo@gmail.com>"]
readme = "README.md"
repository = "https://github.com/yisuschrist/iltransfer"

[tool.poetry.dependencies]
python = "^3.11"
platformdirs = "3.10.0"
rich = "13.5.2"
rich-argparse-plus = "0.3.1.4"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
pylint = "^2.17.7"
sphinx = "^7.2.6"
bandit = "^1.7.5"
pdoc = "^14.1.0"
types-tqdm = "^4.66.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
