[tool.poetry]
name = "iltransfer"
version = "1.1.0"
description = "Transfer your Instaloader downloads to another path"
license = "GPL-3.0-only"
authors = ["Alejandro González Momblán <agelrenorenardo@gmail.com>"]
readme = "README.md"
repository = "https://github.com/yisuschrist/iltransfer"

[tool.poetry.dependencies]
python = "^3.11"
platformdirs = "3.10.0"
rich = "13.5.2"
rich-argparse-plus = "0.3.1.4"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
bandit = "^1.7.5"
commitizen = "^3.10.0"
monkeytype = "^23.3.0"
mypy = "^1.5.1"
pdoc = "^14.1.0"
pylint = "^2.17.7"
sphinx = "^7.2.6"
sphinx-autobuild = "^2021.3.14"
sphinx-rtd-theme = "^1.3.0"
types-tqdm = "^4.66.0.2"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "poetry"
update_changelog_on_bump = true

[tool.isort]
profile = "black"

[tool.pylint]
disable = [
   "W0622",  # Redefining built-in 'format' (redefined-builtin)
   "C0103",  # Constant name doesn't conform to UPPER_CASE naming style (invalid-name)
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
